# ccraft

./: LICENSE  README.md  changelog.txt  pyproject.toml  requirements.txt
ccraft/: __init__.py  __main__.py
ccraft/config/: __init__.py  config.py  version.py
test/: main.py
test/.ccraft/: configurations.json  project.json
test/src/: main.cpp
